js modernization and de-angularing